# repo-activity-score

./: Makefile  README.md  requirements.txt  setup.cfg
.github/: CODEOWNERS
.github/workflows/: checker.yml  python-publish.yml
src/repo_activity/: score.py
src/repo_score/: score.py
