[metadata]
name = repo-activity-score
version = 0.0.1
author = André Correia & InnerSourceCommons
author_email = andrecorreia@pm.me
description = Python implementation of the InnerSourceCommons Repository Activity Score pattern algorithm
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/InnerSourceCommons/repo-activity-score
project_urls =
    Bug Tracker = https://github.com/InnerSourceCommons/repo-activity-score/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src